--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div id="price-container">
         <p class="subtext">Current BTC USD</p>
-        <h1 id="price">$9,503.21</h1>
+        <h1 id="price">loading...</h1>
       </div>
       <div id="goal-container">
         <p>
